# neosr

./: .gitattributes  .gitignore  convert.py  install_linux.sh  install_windows.ps1  pyproject.toml  readme.md  train.py
dataset/: create_lmdb.py
licenses/: readme.md
neosr/archs/: atd_arch.py  cfsr_arch.py  craft_arch.py  dat_arch.py  dct_arch.py  dctlsa_arch.py  drct_arch.py  eimn_arch.py  esc_arch.py  esrgan_arch.py  flexnet_arch.py  grformer_arch.py  hat_arch.py  hitsrf_arch.py  hma_arch.py  metagan_arch.py  moesr_arch.py  mosr_arch.py  mosrv2_arch.py  patchgan_arch.py  plainusr_arch.py  plksr_arch.py  realplksr_arch.py  rgt_arch.py  sebica_arch.py  srformer_arch.py  swinir_arch.py
neosr/data/: __init__.py  augmentations.py  otf_dataset.py  paired_dataset.py  single_dataset.py
neosr/losses/: .gitattributes  dists_loss.py  fdl_loss.py  topiq_fr_weights.pth  topiq_loss.py  wavelet_guided.py
neosr/metrics/: __init__.py  calculate.py  topiq.py
neosr/models/: base.py  image.py
neosr/optimizers/: __init__.py  fsam.py  soap.py  soap_sf.py
neosr/utils/: logger.py  misc.py  options.py
options/: test_esc.toml  train_asid.toml  train_asid_otf.toml  train_atd.toml  train_atd_otf.toml  train_catanet.toml  train_catanet_otf.toml  train_cfsr.toml  train_cfsr_otf.toml  train_compact.toml  train_compact_otf.toml  train_craft.toml  train_craft_otf.toml  train_cugan.toml  train_cugan_otf.toml  train_dat.toml  train_dat_otf.toml  train_dct.toml  train_dct_otf.toml  train_dctlsa.toml  train_dctlsa_otf.toml  train_ditn.toml  train_ditn_otf.toml  train_drct.toml  train_drct_otf.toml  train_eimn.toml  train_eimn_otf.toml  train_esc.toml  train_esc_otf.toml  train_esrgan.toml  train_esrgan_otf.toml  train_fiwhn.toml  train_fiwhn_otf.toml  train_flexnet.toml  train_flexnet_otf.toml  train_grformer.toml  train_grformer_otf.toml  train_hasn.toml  train_hasn_otf.toml  train_hat.toml  (+47 more)
